@@ -182,7 +182,7 @@ int prompt_invent_item(const char *prompt,
                        menu_type type,
                        int type_expect,
                        bool must_exist = true,
-                       bool allow_auto_list = true,
+                       bool auto_list = true,
                        bool allow_easy_quit = true,
                        const char other_valid_char = '\0',
                        int excluded_slot = -1,
@@ -201,7 +201,7 @@ vector<SelItem> prompt_invent_items(
                         menu_type type,
                         int type_expect,
                         invtitle_annotator titlefn = NULL,
-                        bool allow_auto_list = true,
+                        bool auto_list = true,
                         bool allow_easy_quit = true,
                         const char other_valid_char = '\0',
                         vector<text_pattern> *filter = NULL,
